feat: atualiza script de desenvolvimento e adiciona campo empresaId nos modelos
