# src/routes/routes.ts
@@ -34,6 +34,7 @@ const models: TsoaRoute.Models = {
             "email": {"dataType":"string","required":true},
             "isActive": {"dataType":"boolean","required":true},
             "createdAt": {"dataType":"datetime","required":true},
+            "empresaId": {"dataType":"double"},
             "updatedAt": {"dataType":"datetime","required":true},
             "lastLogin": {"dataType":"datetime"},
             "profileImageUrl": {"dataType":"string"},
@@ -68,6 +69,7 @@ const models: TsoaRoute.Models = {
             "name": {"dataType":"string","required":true},
             "email": {"dataType":"string","required":true},
             "password": {"dataType":"string"},
+            "empresaId": {"dataType":"double","required":true},
             "roleIds": {"dataType":"array","array":{"dataType":"double"}},
             "profileImageUrl": {"dataType":"string"},
         },
